# scmesh.github.io

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: mkdocs.yaml
docs/: casos-de-uso.md  codigo-de-conduta.md  comunidade-governanca.md  contribuindo.md  emergencia.md  eventos.md  faq.md  ferramentas.md  financiamento.md  galeria.md  glossario.md  hardware.md  index.md  infraestrutura.md  primeiros-passos.md  radioamadores.md  recursos.md  relatorios.md  seguranca-privacidade.md  wiki-tecnica.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2026-04-17-boas-vindas.md  2026-04-18-simulado.md
