[project]
name = "scmesh-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "mkdocs>=1.6.1",
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-i18n>=0.4.6",
    "mkdocs-material>=9.7.3",
    "pillow>=12.1.1",
    "pymarkdownlnt>=0.9.35",
]